force-app/main/default/objects/SVMXA360__SCONAuthoringLog__c/SVMXA360__SCONAuthoringLog__c.object-meta.xml
<CustomObject>
    <description>This object logs the details of the authoring of Service Contract Plans.</description>
    <label>Contract Authoring Log</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Contract Authoring Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Authoring Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>