force-app/main/default/objects/SVMXA360__SCONAuthoringLog__c/fields/SVMXA360__Message__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Message__c</fullName>
    <description>Logs the error message in case of Error or just logs Success in case of Success.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Message</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>