force-app/main/default/objects/SVMXA360__SCONAuthoringLog__c/fields/SVMXA360__ParentSCONAuthoringLogId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ParentSCONAuthoringLogId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores the Parent SCON Record.</description>
    <label>Parent SCON Authoring Log</label>
    <referenceTo>SVMXA360__SCONAuthoringLog__c</referenceTo>
    <relationshipName>SCON_Authoring_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>