force-app/main/default/objects/SVMXA360__SCONAuthoringLog__c/fields/SVMXA360__ServiceContractId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ServiceContractId__c</fullName>
    <description>Look up to the Service Contract record.</description>
    <label>Service Contract</label>
    <referenceTo>ServiceContract</referenceTo>
    <relationshipLabel>Contract Authoring Logs</relationshipLabel>
    <relationshipName>SCON_Authoring_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>