force-app/main/default/objects/SVMXA360__SCONAuthoringLog__c/fields/SVMXA360__Status__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Status__c</fullName>
    <description>Indicates whether contract line item creation for the batch succeeded or failed.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>