force-app/main/default/objects/SVMXA360__SCONAuthoringLog__c/fields/SVMXA360__TotalBatchesCompleted__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__TotalBatchesCompleted__c</fullName>
    <description>The total batches which were completed. Will be updated by each batch on master record.</description>
    <label>Total Batches Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>