force-app/main/default/objects/SVMXA360__SCONAuthoringLog__c/fields/SVMXA360__TotalNumberOfBatches__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__TotalNumberOfBatches__c</fullName>
    <description>The total batches which were created.</description>
    <label>Total Number of Batches</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>