force-app/main/default/objects/SVMXA360__SCONAuthoringLog__c/fields/SVMXA360__UserId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__UserId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who initiated the execution.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SCON_Authoring_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>